# schematic-Linter

Linter/: README.md  pyproject.toml  requirements.txt
Linter/packaging/windows/: README.md  build.ps1  entry_point.py  schematic-linter.spec
Linter/schematic_linter/: __init__.py  cli.py  config.py  pipeline.py  project.py
Linter/schematic_linter/graph/: __init__.py  anchors.py  builder.py  classifier.py  model.py  net_resolve.py  serialize.py
Linter/schematic_linter/parsers/: __init__.py  bom_parser.py  flatten_check.py  netlist_parser.py  value_parser.py
Linter/schematic_linter/patterns/: __init__.py  ac_coupling_cap.py  base.py  crystal_load_caps.py  decoupling_cap.py  pull_down.py  pull_up.py  rc_lowpass.py  registry.py  series_termination.py  voltage_divider.py
Linter/schematic_linter/pdf/: __init__.py  cropper.py  locator.py
Linter/schematic_linter/report/: generator.py
Linter/schematic_linter/rules/: __init__.py  _common_source.py  _pin_naming.py  base.py  contention_pull_up_down.py  crystal_missing_load_caps.py  excess_decoupling_no_bulk.py  floating_single_pin_net.py  missing_decoupling.py  power_pin_miswire.py  redundant_pulls.py  registry.py  shared_rc_resistor.py  shared_source_resistor.py  sibling_pin_mismatch.py  unconnected_power_pin.py  unloaded_divider.py  zero_ohm_pull_review.py
Linter/tests/: conftest.py  helpers.py  test_bom_parser.py  test_flatten_check.py  test_graph_builder.py  test_graph_serialize.py  test_netlist_parser.py  test_pdf_locator.py  test_pipeline_end_to_end.py  test_project_discovery.py  test_value_parser.py
(+19 files in other folders)
